# easymanet-cli

./: .gitignore  LICENSE  README.md  REPO_GENERATION.md  pyproject.toml
.github/workflows/: bootstrap-release.yml  build-openmanet-image.yml  ci.yml  cli-release.yml
apps/cli/src/easymanet_cli/: __init__.py  app.py  common.py  flash.py  image.py
docs/: README.md  architecture.md  flashing.md  lessons-learned.md  manifest.md  openmanet-config-investigation.md  public-repos.md
docs/design-decisions/: _EXAMPLE_DESIGN_DECISION_.md
docs/problems/: 2026-05-30-flash-path-low-test-coverage.md  2026-05-30-modules-exceed-line-limit.md  _EXAMPLE_PROBLEM_.md
easymanet/: build.py  cli.py  cli_common.py  cli_flash.py  cli_image.py  download.py  format.py  image.py  inject.py  manifest.py  privileges.py  render.py
easymanet/disks/: __init__.py  linux.py  macos.py
examples/: three-node-field-mesh.yml
images/openmanet/provisioning/: extra-packages.txt
images/openmanet/provisioning/openwrt-overlay/: README.md
images/openmanet/provisioning/openwrt-overlay/etc/init.d/: easymanet-boot-report  easymanet-display-status  easymanet-led-status  easymanet-management-lan
images/openmanet/provisioning/openwrt-overlay/etc/sysctl.d/: 99-easymanet.conf
images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/: 95-easymanet-display-status  96-easymanet-led-status  98-easymanet-boot-report
images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/: api-lib.sh  api.sh  boot-report.sh  display-status.sh  led-status.sh  network.sh  provision-runtime.sh  provision.sh  status-lib.sh
images/openmanet/provisioning/openwrt-overlay/www/easymanet-api/v1/: identity  neighbors  status  topology
provisioning/: extra-packages.txt
provisioning/openwrt-overlay/etc/easymanet/: provision.json
provisioning/openwrt-overlay/etc/uci-defaults/: 97-easymanet-management-lan  99-easymanet
provisioning/openwrt-overlay/usr/lib/easymanet/: boot-report.sh  provision-lib.sh  provision.sh
scripts/: verify_overlay_packaging.py
tests/: test_build.py  test_cli.py  test_cli_common.py  test_disks.py  test_download.py  test_extra_packages.py  test_firstboot.py  test_image.py  test_inject.py  test_led_status.py  test_manifest.py  test_packaging.py  test_privileges.py  test_provision_behavior.py  test_render.py  test_sysctl.py  test_validate.py
tests/fixtures/openwrt/: batctl-neighbors-current.txt  batctl-originators-current.txt  brctl-show.txt  ip-addr.txt  ip-link.txt  ip-route.txt  mesh11sd-status.txt  uci-openwrt-state.txt  uci-wireless-radios.txt  wifi-status.txt
tests/shell_harness/: jsonfilter  network-stub.sh  uci
tools/: release_smoke.py
tools/packaging/: verify_overlay_packaging.py
