[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easymanet"
version = "0.1.0"
description = "Zero-touch OpenMANET provisioning and imaging"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EasyMANET Contributors"}
]
keywords = ["openmanet", "mesh", "provisioning", "openwrt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "setuptools>=68",
    "tomli>=2",
    "wheel",
]

[project.scripts]
easymanet = "easymanet.cli:app"

[tool.setuptools.packages.find]
include = ["easymanet*"]

[tool.setuptools.data-files]
"share/easymanet/provisioning" = [
    "provisioning/extra-packages.txt",
]
"share/easymanet/provisioning/openwrt-overlay" = [
    "provisioning/openwrt-overlay/README.md",
]
"share/easymanet/provisioning/openwrt-overlay/etc/easymanet" = [
    "provisioning/openwrt-overlay/etc/easymanet/provision.json",
]
"share/easymanet/provisioning/openwrt-overlay/etc/init.d" = [
    "provisioning/openwrt-overlay/etc/init.d/easymanet-boot-report",
    "provisioning/openwrt-overlay/etc/init.d/easymanet-management-lan",
]
"share/easymanet/provisioning/openwrt-overlay/etc/sysctl.d" = [
    "provisioning/openwrt-overlay/etc/sysctl.d/99-easymanet.conf",
]
"share/easymanet/provisioning/openwrt-overlay/etc/uci-defaults" = [
    "provisioning/openwrt-overlay/etc/uci-defaults/97-easymanet-management-lan",
    "provisioning/openwrt-overlay/etc/uci-defaults/98-easymanet-boot-report",
    "provisioning/openwrt-overlay/etc/uci-defaults/99-easymanet",
]
"share/easymanet/provisioning/openwrt-overlay/usr/lib/easymanet" = [
    "provisioning/openwrt-overlay/usr/lib/easymanet/boot-report.sh",
    "provisioning/openwrt-overlay/usr/lib/easymanet/network.sh",
    "provisioning/openwrt-overlay/usr/lib/easymanet/provision-lib.sh",
    "provisioning/openwrt-overlay/usr/lib/easymanet/provision.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
