[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easymanet"
version = "0.1.0"
description = "Zero-touch OpenMANET provisioning and imaging"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EasyMANET Contributors"}
]
keywords = ["openmanet", "mesh", "provisioning", "openwrt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "setuptools>=68",
    "tomli>=2",
    "wheel",
]

[project.scripts]
easymanet = "easymanet_cli.app:main"
easymanet-desktop = "easymanet_desktop.server:main"
easymanet-publish = "easymanet_publish.cli:app"

[tool.setuptools.packages.find]
where = [
    "packages/core/src",
    "packages/image/src",
    "apps/cli/src",
    "apps/desktop/src",
    "tools/publish/src",
]
include = [
    "easymanet*",
    "easymanet_cli*",
    "easymanet_image*",
    "easymanet_desktop*",
    "easymanet_publish*",
]

[tool.setuptools.package-data]
"easymanet_desktop" = ["static/*"]
"easymanet_publish" = ["templates/*/.github/workflows/*.yml"]

[tool.setuptools.data-files]
"share/easymanet/images/openmanet/provisioning" = [
    "images/openmanet/provisioning/extra-packages.txt",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay" = [
    "images/openmanet/provisioning/openwrt-overlay/README.md",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/etc/easymanet" = [
    "images/openmanet/provisioning/openwrt-overlay/etc/easymanet/provision.json",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/etc/init.d" = [
    "images/openmanet/provisioning/openwrt-overlay/etc/init.d/easymanet-boot-report",
    "images/openmanet/provisioning/openwrt-overlay/etc/init.d/easymanet-management-lan",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/etc/sysctl.d" = [
    "images/openmanet/provisioning/openwrt-overlay/etc/sysctl.d/99-easymanet.conf",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults" = [
    "images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/97-easymanet-management-lan",
    "images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/98-easymanet-boot-report",
    "images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/99-easymanet",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet" = [
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/boot-report.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/network.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/provision-lib.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/provision.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [
    "packages/core/src",
    "packages/image/src",
    "apps/cli/src",
    "apps/desktop/src",
    "tools/publish/src",
    ".",
]
