[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easymanet"
version = "0.2.2"
description = "Public CLI and automation surface for EasyMANET."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "EasyMANET Contributors"}
]
keywords = ["openmanet", "mesh", "provisioning", "openwrt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "setuptools>=68",
    "tomli>=2; python_version < '3.11'",
    "wheel",
]

[project.scripts]
easymanet = "easymanet_cli.app:main"

[tool.setuptools.packages.find]
where = [
    "packages/core/src",
    "packages/image/src",
    "apps/cli/src",
]
include = [
    "easymanet*",
    "easymanet_cli*",
    "easymanet_image*",
]

[tool.setuptools.data-files]
"share/easymanet/images/openmanet/provisioning" = [
    "images/openmanet/provisioning/extra-packages.txt",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay" = [
    "images/openmanet/provisioning/openwrt-overlay/README.md",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/etc/easymanet" = [
    "images/openmanet/provisioning/openwrt-overlay/etc/easymanet/provision.json",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/etc/init.d" = [
    "images/openmanet/provisioning/openwrt-overlay/etc/init.d/easymanet-boot-report",
    "images/openmanet/provisioning/openwrt-overlay/etc/init.d/easymanet-display-status",
    "images/openmanet/provisioning/openwrt-overlay/etc/init.d/easymanet-led-status",
    "images/openmanet/provisioning/openwrt-overlay/etc/init.d/easymanet-management-lan",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/etc/sysctl.d" = [
    "images/openmanet/provisioning/openwrt-overlay/etc/sysctl.d/99-easymanet.conf",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults" = [
    "images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/95-easymanet-display-status",
    "images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/96-easymanet-led-status",
    "images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/97-easymanet-management-lan",
    "images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/98-easymanet-boot-report",
    "images/openmanet/provisioning/openwrt-overlay/etc/uci-defaults/99-easymanet",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet" = [
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/api-lib.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/api.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/boot-report.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/display-status.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/led-status.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/network.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/provision-lib.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/provision-runtime.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/provision.sh",
    "images/openmanet/provisioning/openwrt-overlay/usr/lib/easymanet/status-lib.sh",
]
"share/easymanet/images/openmanet/provisioning/openwrt-overlay/www/easymanet-api/v1" = [
    "images/openmanet/provisioning/openwrt-overlay/www/easymanet-api/v1/identity",
    "images/openmanet/provisioning/openwrt-overlay/www/easymanet-api/v1/neighbors",
    "images/openmanet/provisioning/openwrt-overlay/www/easymanet-api/v1/status",
    "images/openmanet/provisioning/openwrt-overlay/www/easymanet-api/v1/topology",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [
    "packages/core/src",
    "packages/image/src",
    "apps/cli/src",
    ".",
]
